logs_student/map_modifiers/swap.log
In file included from main/map_modifiers//swap.cpp:1:
In file included from main/map_modifiers/../main.hpp:24:
main/map_modifiers/../../.././containers/map.hpp:117:19: error: no member named 'swap' in 'ft::Tree<ft::pair<int, int>, std::less<int> >'
            _tree.swap(x._tree);
            ~~~~~ ^
main/map_modifiers//swap.cpp:22:8: note: in instantiation of member function 'ft::map<int, int>::swap' requested here
    m1.swap(m2);
       ^
1 error generated.
